hw3/hw3.g4
grammar hw3 ;
HTTP: 'http';
HTTPS: 'https';
SLASH: '/';
COLON: ':';
COMMA: ',';

fragment LOCAL_SUBPART : [a-zA-Z0-9._%+-]+;
fragment DOMAIN_SUBPART : [a-zA-Z0-9.-]+;

MELLI_NUMBER: DIGIT+;
EMAIL: LOCAL_SUBPART '@' DOMAIN_SUBPART '.' DOMAIN_SUBPART;

URL: (URL_SCHEME? URL_HOSTNAME (':' URL_PORT)? ('/' URL_PATH)? ('?' URL_QUERY)? ('#' URL_FRAGMENT)?);
URL_HOSTNAME: URL_HOSTNAME_IPV4 | URL_HOSTNAME_IPV6 | (URL_HOSTNAME_DOMAIN '.' URL_HOSTNAME_DOMAIN);
URL_SCHEME: 'http://' | 'https://';
URL_HOSTNAME_IPV4: DIGIT '.' DIGIT '.' DIGIT '.' DIGIT;
URL_HOSTNAME_IPV6: '[' URL_HOSTNAME_IPV6_HEX ']';
URL_HOSTNAME_IPV6_HEX: URL_HOSTNAME_IPV6_HEX_PART (':' URL_HOSTNAME_IPV6_HEX_PART)*;
URL_HOSTNAME_IPV6_HEX_PART: URL_HOSTNAME_IPV6_HEX_DIGIT+;
URL_HOSTNAME_IPV6_HEX_DIGIT: DIGIT | 'a' | 'b' | 'c' | 'd' | 'e' | 'f' | 'A' | 'B' | 'C' | 'D' | 'E' | 'F';
URL_HOSTNAME_DOMAIN: URL_HOSTNAME_DOMAIN_PART ('.' URL_HOSTNAME_DOMAIN_PART)?;
URL_HOSTNAME_DOMAIN_PART: [a-zA-Z0-9]+;
URL_PORT: DIGIT+;
URL_PATH: URL_PATH_PART ('/' URL_PATH_PART)*;
URL_PATH_PART: [a-zA-Z0-9]+;
URL_QUERY: URL_QUERY_PART ('&' URL_QUERY_PART)*;
URL_QUERY_PART: [a-zA-Z0-9]+;
URL_FRAGMENT: URL_FRAGMENT_PART ('&' URL_FRAGMENT_PART)*;
URL_FRAGMENT_PART: [a-zA-Z0-9]+;

emails: (email | melli_number | url | EOF) (COMMA (email | melli_number |  url | EOF))*;
email: EMAIL;
melli_number: MELLI_NUMBER;
url: URL;

DIGIT: [0-9];
WS: [ \t\r\n]+ -> skip;
